# swinir-macos

./: .gitignore  README.md  pyproject.toml
src/swinir_cli/: __init__.py  cli.py
src/swinir_cli/swinir/: __init__.py  network_swinir_mlx.py
