[project]
name = "swinir-cli"
version = "0.1.0"
description = "Small MLX-powered CLI for upscaling images with SwinIR."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "mlx>=0.31.2",
  "numpy>=1.26",
  "pillow>=10.0",
  "requests>=2.31",
]

[project.scripts]
swinir-upscale = "swinir_cli.cli:main"

[project.optional-dependencies]
convert = [
    "timm>=1.0.27",
    "torch>=2.12.1",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
